--- a/extreme_pbr/extreme_pbr_bm_default_style.html
+++ b/extreme_pbr/extreme_pbr_bm_default_style.html
@@ -1,5 +1,6 @@
 <h1 style="">
-<a href="https://superhivemarket.com/creators/andrew_d_shop" target="_blank"><img src="https://raw.githubusercontent.com/ExtremeAddons/product_descriptions/refs/heads/master/extreme_pbr/images/christmas_2025_round_corner.webp" style="max-width:100%;"></a><b style="font-size:32px;"><br></b>
+<a href="https://superhivemarket.com/creators/andrew_d_shop" target="_blank">
+    <img src="https://raw.githubusercontent.com/ExtremeAddons/product_descriptions/7737e98a82165b532c665074c587d7912b6ae3ef/commons/images/christmas_2025_round_corner.webp" style="max-width:100%;"></a><b style="font-size:32px;"><br></b>
 </h1>
 <h1 style=""><b style="font-size:32px;">Elevate Your Creativity with Extreme PBR</b></h1>
 <h3 class=""><font><span style="font-size:16px;">I'm thrilled to introduce you to Extreme PBR Nexus, an addon that I've developed with passion to simplify the world of 3D materials, which I've continuously improved over 5 years of development. Extreme PBR aims to free you from the worry of tackling Blender's nodes. I've designed an intuitive interface that significantly simplifies the management of over 1800 materials.</span></font></h3>
