--- a/extreme_pbr/extreme_pbr.html
+++ b/extreme_pbr/extreme_pbr.html
@@ -104,15 +104,26 @@
         </div>
 
       <!-- Worn Edges -->
-      <div class="md-card" style="background:#fff;border-radius:18px;box-shadow:0 6px 18px rgba(16,24,40,0.08);padding:20px;border:1px solid rgba(16,24,40,0.04);margin-bottom:18px;">
-        <h2 style="margin:8px 0;">Worn Edges</h2>
-        <p>With the new "FX Layer" system, it’s now possible to easily create worn edges in Cycles and Eevee.</p>
-        <div style="display:flex;gap:12px;flex-wrap:wrap;align-items:stretch;">
-          <div style="flex:1 1 49%;min-width:140px;"><img src="https://raw.githubusercontent.com/ExtremeAddons/product_descriptions/0af529e932a3394f05fe2753acabf6ef0a49ad66/extreme_pbr/images/worn_edges_metal_01.webp" alt="worn_edges_metal_01" style="width:100%;height:auto;display:block;border-radius:10px;"></div>
-          <div style="flex:1 1 49%;min-width:140px;"><img src="https://raw.githubusercontent.com/ExtremeAddons/product_descriptions/c44e691de8c7a2be22c9e3103a3dabed9d9938a0/extreme_pbr/images/worn_edges_metal_02.webp" alt="worn_edges_metal_02" style="width:100%;height:auto;display:block;border-radius:10px;"></div>
-          <div style="flex:1 1 49%;min-width:140px;"><img src="https://raw.githubusercontent.com/ExtremeAddons/product_descriptions/c44e691de8c7a2be22c9e3103a3dabed9d9938a0/extreme_pbr/images/worn_edges_metal_03.webp" alt="worn_edges_metal_03" style="width:100%;height:auto;display:block;border-radius:10px;"></div>
+    <div class="md-card" style="background:#fff; border-radius:18px; box-shadow:0 6px 18px rgba(16,24,40,0.08); padding:20px; border:1px solid rgba(16,24,40,0.04); margin-bottom:18px; font-family: sans-serif;">
+      <h2 style="margin:8px 0; font-size: 1.5rem; color: #101828;">Worn Edges</h2>
+      <p style="margin-bottom: 20px; color: #475467; line-height: 1.5;">With the new "FX Layer" system, it’s now possible to easily create worn edges in Cycles and Eevee.</p>
+
+      <div style="display: flex; flex-wrap: wrap; gap: 12px; justify-content: center;">
+
+        <div style="flex: 1 1 30%; min-width: 180px; max-width: 100%;">
+          <img src="https://raw.githubusercontent.com/ExtremeAddons/product_descriptions/ef4160f8cc242e49ec323cfb9a6c6d86be5f3902/extreme_pbr/images/worn_edges_metal_01.webp" alt="worn_edges_metal_01" style="width:100%; height:auto; display:block; border-radius:10px;">
         </div>
+
+        <div style="flex: 1 1 30%; min-width: 180px; max-width: 100%;">
+          <img src="https://raw.githubusercontent.com/ExtremeAddons/product_descriptions/c44e691de8c7a2be22c9e3103a3dabed9d9938a0/extreme_pbr/images/worn_edges_metal_02.webp" alt="worn_edges_metal_02" style="width:100%; height:auto; display:block; border-radius:10px;">
+        </div>
+
+        <div style="flex: 1 1 30%; min-width: 180px; max-width: 100%;">
+          <img src="https://raw.githubusercontent.com/ExtremeAddons/product_descriptions/c44e691de8c7a2be22c9e3103a3dabed9d9938a0/extreme_pbr/images/worn_edges_metal_03.webp" alt="worn_edges_metal_03" style="width:100%; height:auto; display:block; border-radius:10px;">
+        </div>
+
       </div>
+    </div>
 
       <!-- Displace -->
       <div class="md-card" style="background:#fff;border-radius:18px;box-shadow:0 6px 18px rgba(16,24,40,0.08);padding:20px;border:1px solid rgba(16,24,40,0.04);margin-bottom:18px;">
