--- a/extreme_pbr/extreme_pbr.html
+++ b/extreme_pbr/extreme_pbr.html
@@ -38,20 +38,36 @@
       </div>
 
       <!-- Texture Paint -->
-      <div class="md-card" style="background:#fff;border-radius:18px;box-shadow:0 6px 18px rgba(16,24,40,0.08);padding:20px;border:1px solid rgba(16,24,40,0.04);margin-bottom:18px;">
-        <div style="display:flex;gap:16px;flex-wrap:wrap;align-items:flex-start;">
-          <div style="flex:1 1 60%;min-width:240px;">
-            <h2 style="margin:8px 0;">Texture Paint between materials 🖌</h2>
-            <p>You can achieve this with <strong>just 3 clicks</strong>! Explore the simplicity of easily painting between materials with any material from our extensive library of 1800+ materials.</p>
-          </div>
-          <div style="flex:0 0 390px;min-width:200px;">
-            <img src="https://raw.githubusercontent.com/ExtremeAddons/product_descriptions/0af529e932a3394f05fe2753acabf6ef0a49ad66/extreme_pbr/images/paint_cube_v2.webp" alt="texture paint" style="width:100%;height:auto;display:block;border-radius:12px;">
-          </div>
+    <div class="md-card" style="background:#fff; border-radius:18px; box-shadow:0 6px 18px rgba(16,24,40,0.08); padding:25px; border:1px solid rgba(16,24,40,0.04); margin-bottom:18px; font-family: sans-serif;">
+
+      <div style="display:flex; gap:24px; flex-wrap:wrap; align-items:center; margin-bottom: 30px;">
+
+        <div style="flex:1 1 300px; min-width:240px;">
+          <h2 style="margin:0 0 12px 0; font-size: 1.6rem; color: #101828; line-height: 1.2;">
+            Texture Paint between materials 🖌
+          </h2>
+          <p style="margin:0; color: #475467; font-size: 1.1rem; line-height: 1.5;">
+            Unlock unlimited blending possibilities with <strong>just 3 clicks</strong>. Paint seamlessly across any of our <strong>1800+ materials</strong> to create unique, weathered, or layered surfaces directly on your 3D models.
+          </p>
         </div>
-        <div style="position:relative;padding-top:56.25%;height:0;overflow:hidden;border-radius:12px;">
-          <iframe frameborder="0" src="//www.youtube.com/embed/T-hu8EXeb0k" title="Texture paint demo" class="note-video-clip" style="position:absolute;left:0;top:0;width:100%;height:100%;border:0;" allowfullscreen></iframe>
+
+        <div style="flex:1 1 300px; max-width:390px; min-width:200px;">
+          <img src="https://raw.githubusercontent.com/ExtremeAddons/product_descriptions/0af529e932a3394f05fe2753acabf6ef0a49ad66/extreme_pbr/images/paint_cube_v2.webp" alt="texture paint" style="width:100%; height:auto; display:block; border-radius:12px; box-shadow: 0 4px 12px rgba(0,0,0,0.05);">
+        </div>
+
+      </div>
+
+      <div style="margin-top: 20px;">
+        <p style="text-align: center; font-weight: 600; color: #007bff; margin-bottom: 15px; font-size: 0.9rem; text-transform: uppercase; letter-spacing: 1px;">
+          Watch it in action
+        </p>
+
+        <div style="position:relative; padding-top:56.25%; height:0; overflow:hidden; border-radius:12px; background: #000; box-shadow: 0 10px 30px rgba(0,0,0,0.1);">
+          <iframe frameborder="0" src="//www.youtube.com/embed/T-hu8EXeb0k" title="Texture paint demo" style="position:absolute; left:0; top:0; width:100%; height:100%; border:0;" allowfullscreen></iframe>
         </div>
       </div>
+
+    </div>
 
       <!-- Car Paint -->
     <div class="md-card" style="background:#fff; border-radius:18px; box-shadow:0 6px 18px rgba(16,24,40,0.08); padding:20px; border:1px solid rgba(16,24,40,0.04); margin-bottom:18px; font-family: sans-serif;">
@@ -141,22 +157,14 @@
       <p style="margin-bottom: 20px; color: #475467; line-height: 1.5;">A comprehensive collection of <strong>over 1800 materials</strong> is waiting for you in this ready-to-use library. The huge variety of materials can be blended together to significantly enhance your creations. As an example, check out the intricate brick displacement in the rendered image below that showcases the library's potential.</p>
 
       <div style="margin-bottom: 12px;">
-        <img src="https://raw.githubusercontent.com/ExtremeAddons/product_descriptions/0af529e932a3394f05fe2753acabf6ef0a49ad66/extreme_pbr/images/house_facade_01.webp" alt="house_facade_01" style="width:100%; border-radius:12px; display:block; height: auto;">
+        <img src="https://raw.githubusercontent.com/ExtremeAddons/product_descriptions/97651edd571d8b430d9689b31274dc7b8addc542/extreme_pbr/images/house_facade_01.webp" alt="house_facade_01" style="width:100%; border-radius:12px; display:block; height: auto;">
       </div>
 
-      <div style="display: flex; flex-wrap: wrap; gap: 12px;">
-        <div style="flex: 1 1 300px; min-width: 250px;">
-          <img src="https://raw.githubusercontent.com/ExtremeAddons/product_descriptions/0af529e932a3394f05fe2753acabf6ef0a49ad66/extreme_pbr/images/house_facade_02.webp" alt="house_facade_02" style="width:100%; border-radius:12px; display:block; height: auto;">
-        </div>
-        <div style="flex: 1 1 300px; min-width: 250px;">
-          <img src="https://raw.githubusercontent.com/ExtremeAddons/product_descriptions/0af529e932a3394f05fe2753acabf6ef0a49ad66/extreme_pbr/images/house_facade_03.webp" alt="house_facade_03" style="width:100%; border-radius:12px; display:block; height: auto;">
-        </div>
-      </div>
     </div>
 
       <!-- Anti-Tile -->
       <div class="md-card" style="background:#fff;border-radius:18px;box-shadow:0 6px 18px rgba(16,24,40,0.08);padding:20px;border:1px solid rgba(16,24,40,0.04);margin-bottom:18px;">
-        <h3 style="margin:8px 0;">Anti-Tile System</h3>
+        <h2 style="margin:8px 0;">Anti-Tile System</h2>
         <p>From Extreme PBR version 4.1.111 (Released November 17, 2023) a new anti-tile system has been introduced that allows you to eliminate texture repetitions! If you have your own textures and want to use them you can do it with Extreme PBR Shader Maker, this system will eliminate repetitions on your textures 👍</p>
         <div style="position:relative;padding-top:56.25%;height:0;overflow:hidden;border-radius:12px;">
           <iframe frameborder="0" src="//www.youtube.com/embed/iUmIaC6ynwo" title="anti-tile demo" class="note-video-clip" style="position:absolute;left:0;top:0;width:100%;height:100%;border:0;" allowfullscreen></iframe>
@@ -164,38 +172,65 @@
       </div>
 
       <!-- Fast & Easy -->
-      <div class="md-card" style="background:#fff;border-radius:18px;box-shadow:0 6px 18px rgba(16,24,40,0.08);padding:20px;border:1px solid rgba(16,24,40,0.04);margin-bottom:18px;">
-        <h3 style="margin:8px 0;">Fast and Easy</h3>
-        <p>Managing the 1800+ materials is now simple, and we’ve also made it really easy to mix and paint the materials.</p>
-        <div class="embed-responsive embed-responsive-16by9"><div class="ratio ratio-16x9"><iframe width="560" height="315" src="//www.youtube.com/embed/ECspDHwXq3Q?autoplay=1&amp;loop=1&amp;modestbranding=1&amp;rel=0&amp;iv_load_policy=3&amp;disablekb=1&amp;controls=1&amp;showinfo=0&amp;playsinline=1&amp;mute=1&amp;playlist=ECspDHwXq3Q&amp;" frameborder="0" class="note-video-clip" title="YouTube video player" allowfullscreen></iframe></div></div>
+    <div class="md-card" style="background:#fff; border-radius:18px; box-shadow:0 6px 18px rgba(16,24,40,0.08); padding:25px; border:1px solid rgba(16,24,40,0.04); margin-bottom:18px; font-family: sans-serif;">
+
+      <h2 style="margin:8px 0; font-size: 1.6rem; color: #101828; line-height: 1.2;">Fast and Easy Workflow</h2>
+      <p style="margin-bottom: 30px; color: #475467; font-size: 1.1rem; line-height: 1.5;">
+        Navigating through <strong>1800+ materials</strong> has never been this fluid. Experience a redesigned system built for speed, making it incredibly simple to mix, paint, and manage your library without breaking your creative flow.
+      </p>
+
+      <div style="position:relative; padding-top:56.25%; height:0; overflow:hidden; border-radius:12px; background: #000; box-shadow: 0 10px 30px rgba(0,0,0,0.1);">
+        <iframe
+          src="//www.youtube.com/embed/ECspDHwXq3Q?autoplay=1&amp;loop=1&amp;modestbranding=1&amp;rel=0&amp;iv_load_policy=3&amp;disablekb=1&amp;controls=1&amp;showinfo=0&amp;playsinline=1&amp;mute=1&amp;playlist=ECspDHwXq3Q"
+          title="Fast and Easy Workflow Demo"
+          style="position:absolute; top:0; left:0; width:100%; height:100%; border:0;"
+          allowfullscreen>
+        </iframe>
       </div>
+
+    </div>
 
       <!-- Subsurface -->
-      <div class="md-card" style="background:#fff;border-radius:18px;box-shadow:0 6px 18px rgba(16,24,40,0.08);padding:20px;border:1px solid rgba(16,24,40,0.04);margin-bottom:18px;">
-        <h2 style="margin:8px 0;">Subsurface always ready</h2>
-        <p>Subsurface scattering (SSS) simulates how light penetrates objects such as plastic, rubber, and human skin. This effect is now ready to use in all Extreme PBR materials.</p>
-        <div class="embed-responsive embed-responsive-16by9"><div class="ratio ratio-16x9"><iframe width="640" height="360" src="//www.youtube.com/embed/BvVfxNuCrSw?autoplay=1&amp;loop=1&amp;modestbranding=1&amp;rel=0&amp;iv_load_policy=3&amp;disablekb=1&amp;controls=1&amp;showinfo=0&amp;playsinline=1&amp;mute=1&amp;playlist=BvVfxNuCrSw&amp;" frameborder="0" class="note-video-clip" title="YouTube video player" allowfullscreen></iframe></div></div>
+    <div class="md-card" style="background:#fff; border-radius:18px; box-shadow:0 6px 18px rgba(16,24,40,0.08); padding:25px; border:1px solid rgba(16,24,40,0.04); margin-bottom:18px; font-family: sans-serif;">
+
+      <h2 style="margin:8px 0; font-size: 1.6rem; color: #101828; line-height: 1.2;">Subsurface Scattering: Instant Realism</h2>
+      <p style="margin-bottom: 25px; color: #475467; font-size: 1.1rem; line-height: 1.5;">
+        Bring your materials to life. From organic skin to soft plastics and rubber, <strong>Subsurface Scattering (SSS)</strong> is now integrated and <strong>ready to use</strong> across the entire library. Achieve that high-end, lifelike look with zero complex node setups.
+      </p>
+
+      <div style="position:relative; padding-top:56.25%; height:0; overflow:hidden; border-radius:12px; background: #000; box-shadow: 0 10px 30px rgba(0,0,0,0.1);">
+        <iframe
+          src="//www.youtube.com/embed/BvVfxNuCrSw?autoplay=1&amp;loop=1&amp;modestbranding=1&amp;rel=0&amp;iv_load_policy=3&amp;disablekb=1&amp;controls=1&amp;showinfo=0&amp;playsinline=1&amp;mute=1&amp;playlist=BvVfxNuCrSw"
+          title="Subsurface Scattering Demo"
+          style="position:absolute; top:0; left:0; width:100%; height:100%; border:0;"
+          allowfullscreen>
+        </iframe>
       </div>
 
+    </div>
+
       <!-- Surface imperfections -->
-      <div class="md-card" style="background:#fff;border-radius:18px;box-shadow:0 6px 18px rgba(16,24,40,0.08);padding:20px;border:1px solid rgba(16,24,40,0.04);margin-bottom:18px;">
-        <h3 style="margin:8px 0;">Surface Imperfections</h3>
-        <p>With the FX Layers system, realistic imperfections are just a few clicks away, like these scratches and fingerprints.</p>
-        <div style="display:flex;gap:12px;flex-wrap:wrap;align-items:center;">
-          <div style="flex:1 1 48%;min-width:220px;">
-            <img src="https://assets.superhivemarket.com/cache/880bca17903ac163298afbda550980de.webp" alt="surface imperfections" style="width:100%;height:auto;display:block;border-radius:12px">
-          </div>
-          <div style="flex:1 1 48%;min-width:260px;">
-            <div class="position-relative">
-              <div class="embed-responsive embed-responsive-16by9"><div class="ratio ratio-16x9"><iframe src="//www.youtube.com/embed/tA8qkJqEC70?autoplay=1&amp;loop=1&amp;modestbranding=1&amp;rel=0&amp;iv_load_policy=3&amp;disablekb=1&amp;controls=1&amp;showinfo=0&amp;playsinline=1&amp;mute=1&amp;playlist=tA8qkJqEC70&amp;" title="Surface imperfections demo" frameborder="0" width="640" height="360" class="note-video-clip" allowfullscreen></iframe></div></div>
-            </div>
-          </div>
-        </div>
+    <div class="md-card" style="background:#fff; border-radius:18px; box-shadow:0 6px 18px rgba(16,24,40,0.08); padding:20px; border:1px solid rgba(16,24,40,0.04); margin-bottom:18px; font-family: sans-serif;">
+      <h2 style="margin:8px 0; font-size: 1.4rem; color: #101828;">Surface Imperfections</h2>
+      <p style="margin-bottom: 20px; color: #475467; line-height: 1.5;">With the FX Layers system, realistic imperfections are just a few clicks away, like these scratches and fingerprints.</p>
+
+      <div style="margin-bottom: 15px;">
+        <img src="https://raw.githubusercontent.com/ExtremeAddons/product_descriptions/0af529e932a3394f05fe2753acabf6ef0a49ad66/extreme_pbr/images/surface_imperfections_table_01.webp" alt="surface imperfections" style="width:100%; height:auto; display:block; border-radius:12px;">
       </div>
+
+      <div style="width: 100%; border-radius: 12px; overflow: hidden; position: relative; padding-bottom: 56.25%; height: 0; background: #000;">
+        <iframe
+          src="//www.youtube.com/embed/tA8qkJqEC70?autoplay=1&amp;loop=1&amp;modestbranding=1&amp;rel=0&amp;iv_load_policy=3&amp;disablekb=1&amp;controls=1&amp;showinfo=0&amp;playsinline=1&amp;mute=1&amp;playlist=tA8qkJqEC70&amp;"
+          title="Surface imperfections demo"
+          style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: 0;"
+          allowfullscreen>
+        </iframe>
+      </div>
+    </div>
 
       <!-- Mix with mask -->
       <div class="md-card" style="background:#fff;border-radius:18px;box-shadow:0 6px 18px rgba(16,24,40,0.08);padding:20px;border:1px solid rgba(16,24,40,0.04);margin-bottom:18px;">
-        <h3 style="margin:8px 0;">Mix materials with any black and white mask</h3>
+        <h2 style="margin:8px 0;">Mix materials with any black and white mask</h2>
         <p>With the new FX Layer system, it’s easy to mix materials in your black and white image.</p>
         <div style="position:relative;padding-top:56.25%;height:0;overflow:hidden;border-radius:12px;">
           <iframe src="//www.youtube.com/embed/YeOxxflDV1M?autoplay=1&amp;loop=1&amp;modestbranding=1&amp;rel=0&amp;iv_load_policy=3&amp;disablekb=1&amp;controls=1&amp;showinfo=0&amp;playsinline=1&amp;mute=1&amp;playlist=YeOxxflDV1M&amp;" title="YouTube video player" frameborder="0" class="note-video-clip" style="position:absolute;left:0;top:0;width:100%;height:100%;border:0;" allowfullscreen></iframe>
@@ -204,7 +239,7 @@
 
       <!-- Baking -->
       <div class="md-card" style="background:#fff;border-radius:18px;box-shadow:0 6px 18px rgba(16,24,40,0.08);padding:20px;border:1px solid rgba(16,24,40,0.04);margin-bottom:18px;">
-        <h3 style="margin:8px 0;">Baking made easy – ready to export your painted material to UE and other 3D Engines</h3>
+        <h2 style="margin:8px 0;">Unreal Engine & Unity 3D – From Painted Materials to Game-Ready Textures</h2>
         <p>Once you’ve painted your object, you can easily bake it and export it to Unreal Engine or other 3D engines.</p>
         <div style="position:relative;padding-top:56.25%;height:0;overflow:hidden;border-radius:12px;">
           <iframe src="//www.youtube.com/embed/A1ryXqu0krY?autoplay=1&amp;loop=1&amp;modestbranding=1&amp;rel=0&amp;iv_load_policy=3&amp;disablekb=1&amp;controls=1&amp;showinfo=0&amp;playsinline=1&amp;mute=1&amp;playlist=A1ryXqu0krY&amp;" title="YouTube video player" frameborder="0" class="note-video-clip" style="position:absolute;left:0;top:0;width:100%;height:100%;border:0;" allowfullscreen></iframe>
@@ -212,11 +247,23 @@
       </div>
 
       <!-- UV manipulation -->
-      <div class="md-card" style="background:#fff;border-radius:18px;box-shadow:0 6px 18px rgba(16,24,40,0.08);padding:20px;border:1px solid rgba(16,24,40,0.04);margin-bottom:18px;">
-        <h2 style="margin:8px 0;">Simple UV map manipulation</h2>
-        <p>The Mapping Menu allows you to manipulate the UV’s scale and rotation as well as slide maps on the X-Y (UV) axes on the fly – super useful for those who do architecture and interior design. We know how important it is to work visually!</p>
-        <div class="embed-responsive embed-responsive-16by9"><div class="ratio ratio-16x9"><iframe width="640" height="360" src="//www.youtube.com/embed/Tzc4z00iMBE?autoplay=1&amp;loop=1&amp;modestbranding=1&amp;rel=0&amp;iv_load_policy=3&amp;disablekb=1&amp;controls=1&amp;showinfo=0&amp;playsinline=1&amp;mute=1&amp;playlist=Tzc4z00iMBE&amp;" frameborder="0" class="note-video-clip" title="YouTube video player" allowfullscreen></iframe></div></div>
+    <div class="md-card" style="background:#fff; border-radius:18px; box-shadow:0 6px 18px rgba(16,24,40,0.08); padding:25px; border:1px solid rgba(16,24,40,0.04); margin-bottom:18px; font-family: sans-serif;">
+
+      <h2 style="margin:8px 0; font-size: 1.6rem; color: #101828; line-height: 1.2;">Visual Mapping Control: Precision in Seconds</h2>
+      <p style="margin-bottom: 25px; color: #475467; font-size: 1.1rem; line-height: 1.5;">
+        Tired of wrestling with the UV Editor? Manipulate scale, rotation, and position <strong>on the fly</strong> directly from the 3D Viewport. Perfect for <strong>Architecture</strong> and <strong>Interior Design</strong>, where aligning wood grains or tile patterns needs to be instant, visual, and pixel-perfect.
+      </p>
+
+      <div style="position:relative; padding-top:56.25%; height:0; overflow:hidden; border-radius:12px; background: #000; box-shadow: 0 10px 30px rgba(0,0,0,0.1);">
+        <iframe
+          src="//www.youtube.com/embed/Tzc4z00iMBE?autoplay=1&amp;loop=1&amp;modestbranding=1&amp;rel=0&amp;iv_load_policy=3&amp;disablekb=1&amp;controls=1&amp;showinfo=0&amp;playsinline=1&amp;mute=1&amp;playlist=Tzc4z00iMBE"
+          title="UV Mapping Manipulation Demo"
+          style="position:absolute; top:0; left:0; width:100%; height:100%; border:0;"
+          allowfullscreen>
+        </iframe>
       </div>
+
+    </div>
 
       <!-- Shader Overlay -->
       <div class="md-card" style="background:#fff;border-radius:18px;box-shadow:0 6px 18px rgba(16,24,40,0.08);padding:20px;border:1px solid rgba(16,24,40,0.04);margin-bottom:18px;">
