--- a/extreme_pbr/extreme_pbr.html
+++ b/extreme_pbr/extreme_pbr.html
@@ -10,7 +10,7 @@
         </a>
       </div>
       <div style="padding:16px 20px;">
-        <h2 style="margin:6px 0;">Active Promotion</h2>
+        <h2 style="margin:0 0 12px 0; font-size: 1.6rem; color: #101828; line-height: 1.2;">Active Promotion</h2>
         <p style="margin:6px 0;color:#6B7280;">Limited time offer - get Extreme PBR Nexus at a special price with coupon code</p>
       </div>
     </div>
@@ -86,7 +86,7 @@
       <!-- Realtime Water -->
     <div class="md-card" style="background:#fff; border-radius:18px; box-shadow:0 6px 18px rgba(16,24,40,0.08); padding:20px; border:1px solid rgba(16,24,40,0.04); margin-bottom:18px; font-family: sans-serif;">
       <h2 style="margin:8px 0; font-size: 1.5rem; color: #101828;">Realtime Animated Water 💧</h2>
-      <p style="color: #475467; line-height: 1.5; margin-bottom: 15px;">Finally a quick and easy water material! The water is animated automatically, and can be easily edited. Check out this short animation using the water material:</p>
+      <p style="color: #475467; line-height: 1.5; margin-bottom: 15px;">Finally, a quick and easy water material! The water is animated automatically, and can be easily edited. Check out this short animation using the water material:</p>
 
       <div class="embed-responsive embed-responsive-16by9">
         <div class="ratio ratio-16x9">
@@ -159,25 +159,18 @@
           </td>
 
           <td style="width:50%; padding-left:10px; border: 0; vertical-align: top;">
-          <td style="width:50%; padding-left:10px; border: 0; vertical-align: top;">
-            <div class="embed-responsive embed-responsive-16by9">
-              <div class="ratio ratio-16x9">
-                <iframe src="https://www.youtube.com/embed/H1aOo3Ewwb4"
-                        title="displacement demo"
-                        width="640"
-                        height="360"
-                        frameborder="0"
-                        class="note-video-clip"
-                        style="width:100%; border-radius:12px;"
-                        allowfullscreen>
-                </iframe>
-              </div>
+            <div style="position:relative; padding-bottom:56.25%; height:0; overflow:hidden; border-radius:12px; background:#000;">
+              <iframe
+                src="https://www.youtube.com/embed/H1aOo3Ewwb4?rel=0&amp;controls=1"
+                title="displacement demo"
+                style="position:absolute; top:0; left:0; width:100%; height:100%; border:0; border-radius:12px;"
+                allowfullscreen>
+              </iframe>
             </div>
           </td>
         </tr>
       </table>
     </div>
-
       <!-- Create your scene -->
     <div class="md-card" style="background:#fff; border-radius:18px; box-shadow:0 6px 18px rgba(16,24,40,0.08); padding:20px; border:1px solid rgba(16,24,40,0.04); margin-bottom:18px; font-family: sans-serif;">
       <h3 style="margin:8px 0; font-size: 1.4rem; color: #101828;">Create your scene</h3>
@@ -351,7 +344,7 @@
 
     </div>
 
-    <div class="md-card" style="background:#fff; border-radius:18px; box-shadow:0 6px 18px rgba(16,24,40,0.08); padding:25px; border:1px solid rgba(16,24,40,0.04); margin-bottom:18px; font-family: sans-serif;">
+<!--    <div class="md-card" style="background:#fff; border-radius:18px; box-shadow:0 6px 18px rgba(16,24,40,0.08); padding:25px; border:1px solid rgba(16,24,40,0.04); margin-bottom:18px; font-family: sans-serif;">-->
 
       <!-- Shader Overlay -->
       <div class="md-card" style="background:#fff; border-radius:18px; box-shadow:0 6px 18px rgba(16,24,40,0.08); padding:25px; border:1px solid rgba(16,24,40,0.04); margin-bottom:18px; font-family: sans-serif;">
@@ -402,7 +395,7 @@
        <!-- 1800 materials, Asset Browser, Texture Manager and Documentation handled similarly -->
      <div class="md-card" style="background:#fff; border-radius:18px; box-shadow:0 6px 18px rgba(16,24,40,0.08); padding:20px; border:1px solid rgba(16,24,40,0.04); margin-bottom:20px; font-family: sans-serif;">
       <h3 style="margin:8px 0; color: #101828;">More than 1800 Materials included!</h3>
-      <p style="color: #475467; line-height: 1.5;">All the materials are organized into Libraries / Categories, complete with tags and an easy to use search system.</p>
+      <p style="color: #475467; line-height: 1.5;">All the materials are organized into Libraries / Categories, complete with tags and an easy-to-use search system.</p>
       <div style="margin-top:10px;">
         <img src="https://raw.githubusercontent.com/ExtremeAddons/product_descriptions/0af529e932a3394f05fe2753acabf6ef0a49ad66/extreme_pbr/images/metals_popup_ui.webp" alt="materials preview" style="width:100%; border-radius:12px; display:block;">
       </div>
@@ -426,7 +419,7 @@
        <!-- Documentation -->
     <div class="md-card" style="background:#fff; border-radius:18px; box-shadow:0 6px 18px rgba(16,24,40,0.08); padding:20px; border:1px solid rgba(16,24,40,0.04); margin-bottom:18px; font-family: sans-serif;">
       <h2 style="margin:8px 0; font-size: 1.5rem; color: #101828;">Professional documentation</h2>
-      <p style="color: #475467; line-height: 1.5;">I’ve put direct links to the documentation in each section of Extreme PBR Nexus, making it much easier to learn the features – just click on the icons (?) to open the online documentation. For many of the buttons, when you right click on them, a button will appear that links to the documentation. The documentation has also been rewritten from scratch – it’s now much more complete and better structured than before, and is constantly evolving.</p>
+      <p style="color: #475467; line-height: 1.5;">I’ve put direct links to the documentation in each section of Extreme PBR Nexus, making it much easier to learn the features – just click on the icons (?) to open the online documentation. For many of the buttons, when you right-click on them, a button will appear that links to the documentation. The documentation has also been rewritten from scratch – it’s now much more complete and better structured than before, and is constantly evolving.</p>
       <p style="margin-bottom: 15px;"><strong>Documentation link: <a href="https://extreme-pbr-docs.readthedocs.io/en/latest/" target="_blank" style="color:#007bff; text-decoration:none;">Extreme PBR Nexus Manual</a></strong></p>
 
       <table style="width:100%; border-collapse: collapse; border: 0; margin-top:10px;">
@@ -499,12 +492,19 @@
        </div>
 
        <!-- Which versions of Blender -->
-       <div class="md-card" style="background:#fff;border-radius:18px;box-shadow:0 6px 18px rgba(16,24,40,0.08);padding:20px;border:1px solid rgba(16,24,40,0.04);margin-bottom:18px;">
-         <h2 style="margin:8px 0; font-size: 1.5rem; color: #101828;">Which versions of Blender does Extreme PBR Nexus work with?</h2>
-         <p>Extreme PBR is always updated to work with officially released versions of Blender, we respect Blender Beta release times to test and then release any updates. We will always try to respect Blender LTS releases and their lifecycle.</p>
-         <p>A note of caution: Extreme PBR has been tested on the official versions of Blender, i.e. those you can download for free from the website <a href="https://www.blender.org/" target="_blank">https://www.blender.org/</a> This addon is compatible with Cycles and Eevee.</p>
-         <div style="margin-top:10px;"><img src="https://assets.superhivemarket.com/cache/96cbdde928eb6d21ac359cd81d40bc15.jpg" alt="blender compatible" style="width:100%;border-radius:12px;display:block"></div>
-       </div>
+    <div class="md-card" style="background:#fff; border-radius:18px; box-shadow:0 6px 18px rgba(16,24,40,0.08); padding:20px; border:1px solid rgba(16,24,40,0.04); margin-bottom:18px; font-family: sans-serif;">
+      <h2 style="margin:8px 0; font-size: 1.5rem; color: #101828;">Which versions of Blender does Extreme PBR Nexus work with?</h2>
+      <p style="color: #475467; line-height: 1.5;">Extreme PBR is always updated to work with officially released versions of Blender, we respect Blender Beta release times to test and then release any updates. We will always try to respect Blender LTS releases and their lifecycle.</p>
+      <p style="color: #475467; line-height: 1.5;">A note of caution: Extreme PBR has been tested on the official versions of Blender, i.e. those you can download for free from the website <a href="https://www.blender.org/" target="_blank" style="color: #007bff; text-decoration: none;">https://www.blender.org/</a>. This addon is compatible with Cycles and Eevee.</p>
+
+      <div style="margin-top:10px;">
+        <img src="https://raw.githubusercontent.com/ExtremeAddons/product_descriptions/085277e9064ad3cb7faf4071240b8b9bb59b3450/commons/images/blender_50_splash.webp" alt="blender compatible" style="width:100%; border-radius:12px; display:block;">
+
+        <p style="margin-top: 8px; font-size: 0.85rem; color: #98A2B3; font-style: italic; text-align: left;">
+          Blender 5.0 splash by Juan Hernández
+        </p>
+      </div>
+    </div>
 
        <!-- Two equal boxes side-by-side: users count & support -->
     <div class="md-card" style="background:#fff; border-radius:18px; box-shadow:0 6px 18px rgba(16,24,40,0.08); padding:20px; border:1px solid rgba(16,24,40,0.04); margin-bottom:20px; font-family: sans-serif;">
@@ -514,7 +514,7 @@
 
     <div class="md-card" style="background:#fff; border-radius:18px; box-shadow:0 6px 18px rgba(16,24,40,0.08); padding:20px; border:1px solid rgba(16,24,40,0.04); margin-bottom:18px; font-family: sans-serif;">
       <h2 style="margin:8px 0; font-size: 1.5rem; color: #101828;">Any questions? Feel free to ask!</h2>
-      <p style="color: #475467; line-height: 1.5;">Feel free to write to me, I’m happy to answer your questions. [If possible, let me know your issues in a single message.] Here in the right sidebar, you’ll find the "Ask a question" button – get in touch and I’ll answer you personally👍</p>
+      <p style="color: #475467; line-height: 1.5;">Feel free to write to me, I’m happy to answer your questions. [If possible, let me know your issues in a single message.] Here in the right sidebar, you’ll find the "Ask a question" button – get in touch, and I’ll answer you personally👍</p>
       <p style="color: #475467; line-height: 1.5;">Don’t worry – I will also provide support if you have any issues with the addon.</p>
       <div style="margin-top:10px; text-align:center">
         <img src="https://assets.superhivemarket.com/cache/cf93c44f9e37e107537b680549b591ea.gif" alt="support gif" style="display:block; margin:0 auto; width:66%; max-width:480px; border-radius:8px;">
@@ -562,10 +562,8 @@
          </ul>
        </div>
 
-     </div>
-
-     <footer style="margin-top:18px;color:#6B7280;text-align:center;font-size:0.95rem">v10 — Rebuilt from v07 • Summernote safe • Inline-styled • Responsive</footer>
+<!--     </div>-->
    </div>
+  </div>
  </body>
  </html>
-
